--- a/TP7/style.css
+++ b/TP7/style.css
@@ -1,22 +1,85 @@
-	.menuprincipale {
-		height: ;
-		background-color: #191970;
-/*		padding-top: 1px;*/
-		width: 1700px;
-	}
-	img{
-		max-width: 100px;
-		max-height: 100px;
-		border-radius: 50%;
-	}
-	.text-light {
+.menuprincipale {
+	max-height: 280px;
+	background-color: #191970;
+	margin-top : -35px;
+	min-width: 1900px;
+}
+
+.imgicon{
+	border-image-width: 2px;
+	background-image: url("../images/kala.jpg");
+	background-size:100px 100px;
+	border-radius: 50%;
+}
+.text-light {
 		color: white;
-	}
-	.contenu {
+}
+
+button:hover {
+    background-color: black;
+    color: gold;
+}
+
+#sidebar {
+    background-color: #191970;
+    color: white;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -200px;
+    width: 200px;
+    transition: transform 0.3s ease-in-out;
+}
+
+#content {
+    margin-left: 200px;
+    padding: 20px;
+    text-align: justify;
+    top: 100px;
+}
+
+#sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+#sidebar li {
+    padding: 10px;
+}
+
+#menu-toggle:checked~#sidebar {
+    transform: translateX(200px);
+}
+
+.contenu {
 		height: 500px;
 		align-content: center;
 		padding-left: 100px;
-	}
+}
+
+
+#menu-toggle {
+    display: none;
+}
+
+label[for="menu-toggle"] {
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+    padding-left: 20px 100px;
+    position: absolute;
+    top: 20px;
+    left: 90px;
+    z-index: 1;
+}
+
+label[for="menu-toggle"]:hover {
+    background-color: orange;
+    color: violet;
+}
+
+
 	button {
 		color : white;
 		background-color: fuchsia;
@@ -43,23 +106,17 @@
 		background-color: navy;
 
 	}
-	.row {
-        display: flex;
-      }
-      .col {
-        flex: 1; 
-/*        padding: 1em;*/
 
-      }
-	aside{
-		background-color: #191970;
-		padding-top: 1px;
-		max-width: 200px;
-		color: white;
-		height: 900px;
-	}
-<style type="text/css">
-	body {
+.row {
+     display: flex;
+   }
+
+.col {
+      flex: 1; 
+ }
+	
+
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 input[type="checkbox"] {
@@ -100,6 +157,7 @@ input {width: 300px; font-size: 15px; min-height: 20px;}
 }
 .modal-header {
 	background-color: navy;
+	color : white;
     border-bottom: 1px solid #dddddd;
     box-sizing: border-box;
     height: 50px;
@@ -109,7 +167,7 @@ input {width: 300px; font-size: 15px; min-height: 20px;}
     box-sizing: border-box;
     padding-left: 15px;
     line-height: 50px;
-    color: #4d4d4d;
+    color: white;
     font-size: 16px;
     display: inline-block;
 }
@@ -135,7 +193,7 @@ input {width: 300px; font-size: 15px; min-height: 20px;}
     cursor: pointer;
 }
 .example-label:hover {
-	background-color: fuchsia;
+	background-color: orange;
 }
 .btnsubmit{
 	background-color: fuchsia;
@@ -144,42 +202,36 @@ input {width: 300px; font-size: 15px; min-height: 20px;}
 	font-size: 15px;
 }
 
-	.sidebar {
-		height: 300px;
-		background-color: #191970;
-		padding-top: 1px;
-	}
-	.contenu {
-		height: 500px;
-		align-content: center;
-		padding-left: 100px;
-	}
-	button {
-		color : white;
-		background-color: fuchsia;
-		font-size : 15px;
-		padding-top: 2px;
-		border-radius: 4px;
-		padding: 4px 8px;
-	}
-	.posButton{
-		padding-top: 20px;
-		align-content: center;
-	}
-	h1 {
-		color: white;
-		font-size: 50px;
-	}
-	h4 {
-		color: white;
-		font-weight: 2px;
-		font-size: 10px;
-		font-family: sans-serif;
-	}
-	.btn1{
-		min-width: 30px;
-		max-height: 70px;
-		background-color: navy;
+.sidebar {
+	height: 300px;
+	background-color: #191970;
+	padding-top: 1px;
+}
 
-	}
-<
+.contenu {
+	min-height: 500px;
+	align-content: center;
+	padding-left: 300px;
+}
+
+button {
+	color : white;
+	background-color: fuchsia;
+	font-size : 15px;
+	padding-top: 2px;
+	border-radius: 4px;
+	padding: 4px 8px;
+}
+
+.posButton{
+	padding-top: 20px;
+	align-content: center;
+}
+
+
+.btn1{
+	min-width: 30px;
+	max-height: 70px;
+	background-color: navy;
+
+}
